--- a/html/page_BinFileToRead.html
+++ b/html/page_BinFileToRead.html
@@ -165,7 +165,7 @@ class <span class="Att">BinFileToMem</span> : public ToMemBase
 
    BinFileToMem(BinFileToMem &amp;&amp;obj) noexcept = default ;
 
-   BinFileToMem & operator = (BinFileToMem &amp;&amp;obj) noexcept = default ;
+   BinFileToMem &amp; operator = (BinFileToMem &amp;&amp;obj) noexcept = default ;
 
    // swap/move objects
 
