--- a/html/page_CondLangLR1.html
+++ b/html/page_CondLangLR1.html
@@ -73,7 +73,7 @@ Below is the file <b>AMP.lang</b> with the definition of the <b>AMP</b> language
 
   EXPR + EXPR.a   : if( a&gt;=M ) opAdd  = A
 
-  EXPR.a * EXPR.b : if( a&gt;=P & b&gt;=M ) opMul  = M
+  EXPR.a * EXPR.b : if( a&gt;=P &amp; b&gt;=M ) opMul  = M
  }
 
 </pre>
