--- a/html/page_DynObject.html
+++ b/html/page_DynObject.html
@@ -76,7 +76,7 @@ constructed using it's default constructor.
    
    // no copy
    
-   DynObject(const DynObject&lt;T&gt; &obj) = delete ;
+   DynObject(const DynObject&lt;T&gt; &amp;obj) = delete ;
    
    DynObject&lt;T&gt; & operator = (const DynObject&lt;T&gt; &amp;obj) = delete ;
    
