--- a/html/page_Function.html
+++ b/html/page_Function.html
@@ -131,7 +131,7 @@ The second way to create a <b>Function</b> is to convert a functor to the functi
 <pre>
 
 template &lt;class FuncType,class T&gt;
-auto <span class="Att">ToFunction</span>(const T &obj);
+auto <span class="Att">ToFunction</span>(const T &amp;obj);
 
 </pre>
 
