--- a/html/page_Init.html
+++ b/html/page_Init.html
@@ -107,7 +107,7 @@ and access it:
     return obj; 
    }
   
-  T & operator * () const { return *getPtr(); }
+  T &amp; operator * () const { return *getPtr(); }
   
   T * operator -> () const { return getPtr(); }
  };
