--- a/html/page_NoThrowFlags.html
+++ b/html/page_NoThrowFlags.html
@@ -76,7 +76,7 @@ class SomeClass
 
    SomeClass() noexcept;
 
-   SomeClass(const SomeClass &obj) noexcept;
+   SomeClass(const SomeClass &amp;obj) noexcept;
  };
 
 </pre>
