--- a/html/page_PlanInit.html
+++ b/html/page_PlanInit.html
@@ -114,7 +114,7 @@ class <span class="Att">PlanInitObject</span>
    
    T * getPtr() const;
   
-   T & operator * () const;
+   T &amp; operator * () const;
   
    T * operator -> () const;
 
