--- a/html/page_PtrLen.html
+++ b/html/page_PtrLen.html
@@ -168,7 +168,7 @@ it advances in the ascending order. I.e. after <b>(ptr,len)</b> the <b>(ptr+1,le
   
   bool operator ! () const { return !len;  } // range is empty
   
-  T & operator * () const { return *ptr; } // first element
+  T &amp; operator * () const { return *ptr; } // first element
   
   T * operator -> () const { return ptr; } // pointer to the first element
   
