--- a/html/page_PtrLenReverse.html
+++ b/html/page_PtrLenReverse.html
@@ -111,7 +111,7 @@ The set of cursor methods:
   
   bool operator ! () const { return !len; } // range is empty
   
-  T & operator * () const { return ptr[-1]; } // first element
+  T &amp; operator * () const { return ptr[-1]; } // first element
   
   T * operator -> () const { return ptr-1; } // pointer to the first element
   
