--- a/html/page_String.html
+++ b/html/page_String.html
@@ -80,7 +80,7 @@ class <span class="Att">String</span>
    
    using PrintOptType = StrPrintOpt ;
    
-   void print(PrinterType &obj,PrintOptType opt) const;
+   void print(PrinterType &amp;obj,PrintOptType opt) const;
    
    // swap/move objects
    
