--- a/html/page_ToMemBase.html
+++ b/html/page_ToMemBase.html
@@ -63,7 +63,7 @@ class <span class="Att">ToMemBase</span> : NoCopy
 
    // swap/move objects
 
-   void objSwap(ToMemBase &obj);
+   void objSwap(ToMemBase &amp;obj);
    
    explicit ToMemBase(ToMoveCtor&lt;ToMemBase&gt; obj);
  };
