--- a/html/page_Trees.html
+++ b/html/page_Trees.html
@@ -316,7 +316,7 @@ return <b>locate...()</b> results.
 
     bool operator ! () const { return !ptr; }
 
-    T & operator * () const { return *ptr; }
+    T &amp; operator * () const { return *ptr; }
 
     T * operator -&gt; () const { return ptr; }
 
@@ -345,7 +345,7 @@ return <b>locate...()</b> results.
 
     bool operator ! () const { return !ptr; }
 
-    T & operator * () const { return *ptr; }
+    T &amp; operator * () const { return *ptr; }
 
     T * operator -&gt; () const { return ptr; }
 
