--- a/html/page_APRTest.html
+++ b/html/page_APRTest.html
@@ -66,7 +66,7 @@ class <span class="Att">TestEngine</span> : NoCopy
    ~TestEngine() {}
    
    template &lt;class Report&gt;
-   TestResult operator () (Integer N,Report &report) const;
+   TestResult operator () (Integer N,Report &amp;report) const;
  };
 
 } // namespace APRTest
@@ -127,7 +127,7 @@ class <span class="Att">NoReport</span>
    NoReport() {}
   
    template &lt;class Integer&gt;
-   void start(const Integer &N) { Used(N); }
+   void start(const Integer &amp;N) { Used(N); }
    
    void sanity(const char *msg) { Used(msg); }
    
@@ -138,18 +138,18 @@ class <span class="Att">NoReport</span>
    void testQ(QType prime_q) { Used(prime_q); }
    
    template &lt;class Integer&gt;
-   void cappa(PtrLen&lt;const Integer&gt; cappa,const Integer &Nminus1) { Used(cappa); Used(Nminus1); }
+   void cappa(PtrLen&lt;const Integer&gt; cappa,const Integer &amp;Nminus1) { Used(cappa); Used(Nminus1); }
    
    template &lt;class Integer&gt;
-   void cappa2(const Integer &cappa,const Integer &Nminus1) { Used(cappa); Used(Nminus1); }
+   void cappa2(const Integer &amp;cappa,const Integer &amp;Nminus1) { Used(cappa); Used(Nminus1); }
    
    void startProbe() {}
    
    template &lt;class Integer&gt;
-   void probe(const Integer &cnt) { Used(cnt); }
+   void probe(const Integer &amp;cnt) { Used(cnt); }
    
    template &lt;class Integer&gt;
-   void div(const Integer &D) { Used(D); }
+   void div(const Integer &amp;D) { Used(D); }
    
    void hard() {}
    
@@ -244,7 +244,7 @@ There is a faster parallel variant of this test.
 
 <pre>
 
-template &lt;class Integer,template &lt;class T,class F=GetNoThrowFlags&lt;T&gt; &gt; class ArrayAlgo&gt
+template &lt;class Integer,template &lt;class T,class F=GetNoThrowFlags&lt;T&gt; &gt; class ArrayAlgo&gt;
 class <span class="Att">ParaTestEngine</span> : NoCopy
  {
   public:
@@ -254,7 +254,7 @@ class <span class="Att">ParaTestEngine</span> : NoCopy
    ~ParaTestEngine() {}
    
    template &lt;class Report&gt;
-   TestResult operator () (Integer N,Report &report) const;
+   TestResult operator () (Integer N,Report &amp;report) const;
  };
 
 </pre>
